--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.48.2"
+    "react-hook-form": "^7.48.2",
+    "react-to-pdf": "^1.0.1"
   }
 }
