--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@mui/x-date-pickers": "^6.18.2",
+    "dayjs": "^1.11.10",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "next": "14.0.3",
